After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637237 - gapplication: plug a memory leak
gapplication: plug a memory leak
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gapplication
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2010-12-14 16:19 UTC by Cosimo Cecchi
Modified: 2010-12-15 10:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gapplication: plug a memory leak (851 bytes, patch)
2010-12-14 16:19 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2010-12-14 16:19:00 UTC
The actions array memory was not released.
Comment 1 Cosimo Cecchi 2010-12-14 16:19:03 UTC
Created attachment 176412 [details] [review]
gapplication: plug a memory leak
Comment 2 Matthias Clasen 2010-12-15 01:42:56 UTC
Review of attachment 176412 [details] [review]:

Please commit.
Comment 3 Cosimo Cecchi 2010-12-15 10:44:43 UTC
Attachment 176412 [details] pushed as 056a5d7 - gapplication: plug a memory leak